# NEXUS

./: .gitignore  AGENT_READ_FIRST.md  AGENT_STATUS.MD  ANTI_DRIFT_PROTOCOL.md  CHANGELOG.md  COMPREHENSIVE_TESTING_README.md  COMPRESSION_ACTIVATION_PLAN.md  COMPRESSION_BREAKTHROUGH_SHOWCASE.md  COMPRESSION_IMPROVEMENT_ROADMAP.md  CONTRIBUTING.md  CORE_DEVELOPMENT_ROADMAP.md  Cargo.toml  DRIFT_DETECTOR.py  DRIFT_ISSUE_EXPLANATION.md  DRIFT_LOCKDOWN_MANIFEST.md  DRIFT_LOCKDOWN_PROTOCOL.md  DRIFT_LOCKDOWN_SUMMARY.md  ENHANCED_COMPRESSION_STATUS.md  FINAL_REALITY_STATUS.md  HOLOGRAPHIC_INTEGRATION_ROADMAP.md  LICENSE  MULTI_LANGUAGE_COMPRESSION_BREAKTHROUGH.md  PHASE_1_BREAKTHROUGH_SUMMARY.md  README.md  REALITY_CHECK_AGENT_CLAIMS.md  REALITY_CHECK_SUMMARY.md  SETUP.md  check_git.ps1  complete_merge.bat  complete_merge.ps1  comprehensive_test_report.md  massive_codebase_testing.rs  real_compression_test_report.md  real_compression_test_results.json  run_comprehensive_tests.ps1  run_tests.rs  test_real_compression.rs  test_results.json  verification_results.json
cleanup/: CLEANUP_LOG.md
cleanup/root_test_artifacts/: BREAKTHROUGH_TEST_RESULTS_SUMMARY.md  MASSIVE_CODEBASE_TESTING_PLAN.md  REALITY_STATUS_REPORT.md  REAL_VISION_AND_TESTING.md  TESTING_FRAMEWORK.md  codebase_download_report.md  comprehensive_test_results.json  downloaded_codebases.json  mythgraph_ledger.py  neuromem.rs  real_compression_test_report.md  requirements.txt  run_comprehensive_tests.bat  test_real_compression.rs  test_report.md  validate_breakthrough.rs  verification_results.csv
cleanup/test_artifacts/: integration_tests.rs  mod.rs  multi_language_compression_test.py  performance_tests.rs  test_adaptive_optimization.py  test_data.rs  test_enhanced_compression.rs  test_kai_ensemble_comprehensive.py  theory_tests.rs  validation_suite.rs
docs/: COMPRESSION_QUICK_REFERENCE.md  COMPRESSION_STRATEGIC_ANALYSIS.md  CURRENT_SYSTEM_REALITY.md  DRIFT_PREVENTION_PROCESS.md  NEXT_STEPS_OPTIMIZATION_PHASE.md  PROJECT_STATUS_SUMMARY.md  SYSTEM_INTEGRITY_CHECKLIST.md  WORKING_COMPRESSION_SYSTEM.md  compression_simulation.md  digital_dna_implementation.md  interoperability.md  specification.md  ultimate_vision.md
logs/: recent-sync.md
src/: ai_scheduler.rs  demo_enhanced_compression.rs  enhanced_compression.rs  gpu_acceleration.rs  lib.rs  main.rs  nexus_compression_engine.rs  setup_models.py
src/ai_scheduler/: mod.rs
src/ast/: mod.rs
src/bridges/: mod.rs  python.rs
src/gamma_ast/: mod.rs
src/parser/: mod.rs
src/tests/: mod.rs
tests/: comprehensive_system_test.py  download_real_codebases.py  integration_tests.rs  mod.rs  performance_tests.rs  real_compression_integration_test.py  run_comprehensive_compression_tests.py  test_gpu_acceleration.rs  test_utils.rs  theory_tests.rs  unit_tests.rs
working_code/: REAL_WORKING_SYSTEMS_INVENTORY.md  enhanced_compression.rs  test_nexus_real_compression.rs  test_simple_compression.rs
