[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
authors = ["NEXUS Team <team@nexus-lang.org>"]
description = "Universal Language Bridge - AI-Native, Provably Correct"
license = "MIT"
repository = "https://github.com/nexus-lang/nexus"
keywords = ["programming-language", "ai-native", "language-bridge", "interoperability"]
categories = ["programming-languages", "development-tools"]

[dependencies]
# Core infrastructure
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Core dependencies only
num_cpus = "1.16"  # CPU core detection

# Testing and development
criterion = { version = "0.5", optional = true }
proptest = "1.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
tempfile = "3.8"

[features]
default = ["std"]
std = []
no_std = []
gpu = []

[lib]
name = "nexus"
path = "src/lib.rs"

[[bin]]
name = "nexus"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
